fixed problem with checkbox icon and horizontal scroll at group's edit page

--- a/app/assets/styles/groups/groups-edit.scss
+++ b/app/assets/styles/groups/groups-edit.scss
@@ -4,9 +4,7 @@
 
 .add-permission {
   width: 100%;
-  position: absolute;
   margin-top: 45px;
-  z-index: 2;
 
   .option .btn-group, .option .dropdown-toggle {
     width: 100%;
